# honey-did

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.ts  test-results.txt  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
coverage/: clover.xml  coverage-final.json  index.html
coverage/components/: AddButton.svelte.html  CustomSectionEditor.svelte.html  CustomSubsections.svelte.html  ExportDialog.svelte.html  FormBuilder.svelte.html  FormField.svelte.html  FormPreview.svelte.html  HelpModal.svelte.html  ImportDialog.svelte.html  ItemCard.svelte.html  LicenseModal.svelte.html  LockScreen.svelte.html  NotesField.svelte.html  SetPasswordModal.svelte.html  SettingsModal.svelte.html  index.html
coverage/sections/: BillsSection.svelte.html  ContactsSection.svelte.html  CustomSectionPage.svelte.html  DigitalSection.svelte.html  FinancialSection.svelte.html  HouseholdSection.svelte.html  InsuranceSection.svelte.html  LegalSection.svelte.html  MedicalSection.svelte.html  PersonalSection.svelte.html  PetsSection.svelte.html  PropertySection.svelte.html  WelcomeScreenSection.svelte.html  index.html
coverage/stores/: document.ts.html  index.html  theme.ts.html
playwright-report/: index.html
src/: App.svelte
src-tauri/: Cargo.toml  honey-did-legacy-document.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: encryption.rs  export.rs  lib.rs  main.rs  models.rs  storage.rs
test-results/: .last-run.json
(+68 files in other folders)
