[package]
name = "honey-did"
version = "0.3.0"
description = "A secure legacy document creator"
authors = []
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "honey_did_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ring = "0.17"
argon2 = "0.5"
base64 = "0.21"
rand = "0.8"
chrono = "0.4"
regex = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"

[target.'cfg(not(target_os = "android"))'.dependencies]
keyring = "2"
directories = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = false
